sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: reassignment to val
		if (i= i+1) { 
                     ^AlgBubbleSort1:5: error: missing arguments for method echange in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
			echange;
                        ^