sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	for (i <- 0 to 9) { 
		if (i= i+1) { 
			echange;
		}
		
		
				
			}
}
		

		
		
